<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_spacing_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_new_item_description" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/activity_new_item_title"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_spacing_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/keywordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/activity_new_item_keyword"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/saveButton"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_new_item_save" />

</LinearLayout>