<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    android:padding="@dimen/activity_spacing_margin">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_spacing_margin"
        android:src="@drawable/ic_forgetfull_logo" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/pinCodeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/activity_login_pin"
            android:inputType="numberPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        style="@style/Button"
        android:id="@+id/enterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_spacing_margin"
        android:text="@string/activity_login_enter" />

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/activity_login_developed_by" />

</LinearLayout>